--- a/myblog/templates/base.html
+++ b/myblog/templates/base.html
@@ -14,42 +14,53 @@
 </head>
 <body>
 <!--#############################  Nav  ###################################-->
-<!--    <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #4086ba;">-->
-<!--        <a class="navbar-brand" href="#">Navbar</a>-->
-<!--        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--            <span class="navbar-toggler-icon"></span>-->
-<!--        </button>-->
+    <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #4086ba;">
+        <a class="navbar-brand" href="{% url 'post_list' %}">Home</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-<!--        <div class="collapse navbar-collapse" id="navbarSupportedContent">-->
-<!--            <ul class="navbar-nav mr-auto">-->
-<!--                <li class="nav-item active">-->
-<!--                    <a class="nav-link" href="{% url 'post_list_url' %}">Post <span class="sr-only">(current)</span></a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" href="#"></a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link " href="admin/">Admin</a>-->
-<!--                </li>-->
-<!--            </ul>-->
-<!--            <form class="form-inline my-2 my-lg-0">-->
-<!--                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
-<!--                <button class="btn btn-outline my-2 my-sm-0" type="submit">Search</button>-->
-<!--            </form>-->
-<!--        </div>-->
-<!--    </nav>-->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'post_list' %}">Post <span class="sr-only">(current)</span></a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link " href="admin/">Admin</a>
+                </li>
+            </ul>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContentt">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'post_create' %}">Create Post<span class="sr-only">(current)</span></a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link " href="admin/">Admin</a>
+                </li>
+            </ul>
+
+
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </div>
+    </nav>
 
 <!--#############################  End Nav  ###################################-->
 
     <div class="container mt-3">
         <div class="row">
-            <div class="col-3"></div>
-            <div class="col-6">
+            <div class="col-2"></div>
+            <div class="col-8">
                 {% block content %}
 
                 {% endblock %}
             </div>
-            <div class="col-3"></div>
+            <div class="col-2"></div>
         </div>
     </div>
 
