--- a/myblog/templates/blog/post_list.html
+++ b/myblog/templates/blog/post_list.html
@@ -8,11 +8,9 @@
 
         <h1 class="mb-5">My Blog</h1>
 
-            {% for post in posts %}
+            {% for post in post_list %}
 
                     {% include 'blog/includes/card_post.html' %}
-
-
 
             {% endfor %}
 
