--- a/myblog/templates/base.html
+++ b/myblog/templates/base.html
@@ -57,6 +57,16 @@
             <div class="col-2"></div>
             <div class="col-8">
                 {% block content %}
+                        {% if messages %}
+                            <ul class="messages">
+                                {% for message in messages %}
+                                    <li class="{{ message.tags }}">
+                                        {{ message|safe }}
+                                        <a href="#" class="close">✖</a>
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        {% endif %}
 
                 {% endblock %}
             </div>
