--- a/myblog/templates/blog/post_create.html
+++ b/myblog/templates/blog/post_create.html
@@ -22,7 +22,7 @@ Create new post
                 </div>
 
                 <button type="submit" class="btn btn-outline-info">Update Post</button>
-                <a href="{% url 'post_detail' slug=post.slug %}" class="btn btn-outline-info float-right">Back</a>
+                <a href="{% url 'post_detail' slug=post.slug %}" class="btn btn-outline-info float-right">Cancel</a>
             </form>
         </div>
 
