check users for upload and delete post

--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -7,16 +7,22 @@
 
     {% block content %}
 
-            <a href="{% url 'post_update' pk=post.id %}" class="btn btn-outline-info">Update post</a>
+            {% if user.is_authenticated  and post.author == user %}
 
-            <a href="{% url 'post_delete' pk=post.id %}" class="btn btn-outline-danger float-right">Delete</a>
+                    <a href="{% url 'post_update' pk=post.id %}" class="btn btn-outline-info">Update post</a>
 
-        <h1 class="mb-5 mt-5" >{{ post.title }}</h1>
-            <p class="date"> Автор: {{ post.author }} | Опубликовано: {{ post.publish }}</p>
-                {{ post.body|linebreaks }}
-            <p>
+                    <a href="{% url 'post_delete' pk=post.id %}" class="btn btn-outline-danger float-right">Delete</a>
+
+                <h1 class="mb-5 mt-5">{{ post.title }}</h1>
+                    <p class="date"> Автор: {{ post.author }} | Опубликовано: {{ post.publish }}</p>
+                    {{ post.body|linebreaks }}
+                    <p>
                 <a href="{% url 'post_share' pk=post.id %}">Поделиться статьей</a>
-            </p>
-
+                    </p>
+            {% else %}
+                    <h1 class="mb-5 mt-5">{{ post.title }}</h1>
+                    <p class="date"> Автор: {{ post.author }} | Опубликовано: {{ post.publish }}</p>
+                    {{ post.body|linebreaks }}
+            {% endif %}
     {% endblock %}
 
