Tags, add tags view and detail

--- a/myblog/templates/blog/includes/card_post.html
+++ b/myblog/templates/blog/includes/card_post.html
@@ -12,15 +12,15 @@
             <a href="{{ post.get_absolute_url }}" class="btn btn-info">Read</a>
         </div>
 
-<!--        <div class="card-footer text-muted">-->
-<!--            Tags:-->
-<!--                {% for tag in post.tags.all %}-->
+        <div class="card-footer text-muted">
+            Tags:
+                {% for tag in post.tags.all %}
 
-<!--                <a href="{% url 'tag_detail_url' slug=tag.slug %}">{{ tag.title }}</a>-->
+                <a href="{% url 'tag_detail' slug=tag.slug %}">{{ tag.title }}</a>
 
-<!--                {% endfor %}-->
+                {% endfor %}
 
-<!--            | Количество просмотров {{ post.viewed }} | Комментариев: {{ post.comments.count }}-->
+            | Комментариев: {{ post.comments.count }}
 
-<!--        </div>-->
+        </div>
     </div>
