--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -34,14 +34,7 @@
 
         {% endif %}
 
-                <h2 style="margin-top: 100px; margin-bottom: 50px ">Похожие статьи:</h2>
-
-                    {% for post in similar_posts %}
-
-                       <p><a href="{{ post.get_absolute_url }}">{{ post.title}}</a></p> <br>
-
-                    {% endfor %}
-
+                {% include 'blog/includes/similar_posts.html' %}
 
     {% endblock %}
 
