--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% load blog_tags %}
+
 
     {% block title %}
         {{ post.title }}
@@ -19,7 +21,7 @@
 
                 <h1 class="mb-5 mt-5">{{ post.title }}</h1>
                     <p class="date"> Автор: {{ post.author }} | Опубликовано: {{ post.publish }}</p>
-                    {{ post.body|linebreaks }}
+                    {{ post.body| markdown_format }}
                     <p>
                 <a href="{% url 'post_share' pk=post.id %}">Поделиться статьей</a>
                     </p>
@@ -30,7 +32,7 @@
 
                 <h1 class="mb-5 mt-5">{{ post.title }}</h1>
                 <p class="date"> Автор: {{ post.author }} | Опубликовано: {{ post.publish }}</p>
-                {{ post.body|linebreaks }}
+                {{ post.body| markdown_format }}
 
         {% endif %}
 
